--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_LOCALE=pl
 PET_API_URL=https://petstore.swagger.io/v2/pet
 
 LOG_CHANNEL=stack
